fix overlapped margin

--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -11,7 +11,7 @@ a {
   position: fixed;
   left: 15px;
   top: 15px;
-  width: 80px;
+  width: 150px;
   font-family: Helvetica, sans-serif; }
   .sidebar a {
     text-decoration: none; }
@@ -64,7 +64,7 @@ a {
 
 .content {
   max-width: 70%;
-  margin-left: 150px;
+  margin-left: 200px;
   margin-right: 20px;
   margin-bottom: 50px; }
   .content h1 {
